# FinanceIQ

./: .coverage  .dockerignore  .env.example  .gitignore  ARCHITECTURE_DIAGRAM.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  POST_IMPLEMENTATION_CHECKLIST.md  QDRANT_SETUP.md  QUICK_START.md  README.md  SLICE_1.1_COMPLETION.md  TEST_RESULTS.md  docker-compose.yml  main.py  pyproject.toml  railway.toml  run.sh
.awos/commands/: tasks.md  tech.md
.awos/subagents/: python-expert.md
.streamlit/: config.toml
context/product/: architecture.md  product-definition-lite.md  product-definition.md  roadmap.md
context/spec/001-pdf-upload-text-extraction/: functional-spec.md  tasks.md  (+1 more)
data/sample/: DOWNLOAD_REAL_PDFS.txt  README.md  TEST_PLAN.md  test-invalid.txt
scripts/: start_qdrant.sh  verify_qdrant_setup.sh
src/agents/: __init__.py  decomposer.py  executor.py  models.py  router.py  synthesizer.py  workflow.py
src/config/: settings.py
src/pdf_processor/: exceptions.py  extractors.py  logging_config.py  models.py  service.py  storage.py  validators.py
src/rag/: __init__.py  chunker.py  embedder.py  exceptions.py  models.py  query_engine.py  service.py  vector_store.py
src/ui/: app.py
tests/: test_error_messages.py
tests/agents/: test_decomposer.py  test_executor.py  test_router.py  test_synthesizer.py  test_workflow.py
tests/integration/: test_agents_e2e.py  test_rag_e2e.py
tests/performance/: __init__.py  test_agent_performance.py
tests/rag/: test_chunker.py  test_embedder.py  test_query_engine.py  test_rag_service.py  test_vector_store.py
(+13 files in other folders)
